# evovlerun

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dev.sh  feature ideas:
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt  run_mcp.sh
backend/app/: config.py  main.py
backend/app/core/: crypto.py  ratelimit.py  security.py  supabase.py
backend/app/routers/: auth.py  billing.py  health.py  ingestion.py  limiter.py  mcp_keys.py  metrics.py  oauth.py  performance.py  providers.py  training.py
backend/app/services/: connections.py  email.py  garmin_sync.py  limiter_engine.py  metrics_engine.py  oauth_clients.py  oauth_jwt.py  oauth_state.py  oauth_token_store.py  performance.py  plan_generator.py  post_workout_engine.py  profile_sync.py  trend_aggregates.py  trend_engine.py  workouts.py
backend/app/services/llm/: base.py  (+3 more)
backend/mcp_server/: auth.py  context.py  server.py  token_verifier.py
backend/mcp_server/tools/: activities.py  conversation_init.py  latest.py  limiter.py  metrics.py  performance.py  period_summary.py  plan_crud.py  plans.py  recovery.py
backend/scripts/: register_strava_webhook.py
backend/tests/: test_billing_checkout.py  test_billing_webhook.py  test_connector_status.py  test_health.py  test_mcp_keys_install.py  test_oauth_deny.py  test_oauth_discovery.py  test_oauth_jwt.py  test_oauth_pkce.py  test_oauth_token_hardening.py  test_period_summary.py  test_plan_crud.py  test_plan_crud_replace_window.py  test_ratelimit.py  test_sentry_init.py  test_strava_webhook.py  test_token_verifier.py
(+116 files in other folders)
