[project]
name = "evolverun-backend"
version = "0.1.0"
description = "EvolveRun adaptive performance OS — FastAPI backend"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]  # line length handled by formatter
